# add-datetime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
files/: Preffered Mapping Rules Template.LAS
src/add_datetime/: __init__.py  core.py
tests/: test_core.py
